--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=gestion
 
 spring.datasource.url=jdbc:mysql://localhost:3306/canchas
 spring.datasource.username=root
-spring.datasource.password=$RoT2009
+spring.datasource.password=25miloportunidades
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
